charts/pinchflat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
spec:
  selector:
    app: pinchflat
  ports:
    - port: 8945
