charts/pinchflat/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: pinchflat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kavorites.koudijs.app/title: YouTube
spec:
  rules:
    - host: youtube.koudijs.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  pinchflat
                port:
                  number: 8945
  tls:
    - secretName: pinchflat-cert
      hosts:
        - youtube.koudijs.me
